--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <header>ALURAFLIX</header>]
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/5y58Na5g9hw?si=iFsyYONpe_c4s1Hg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
