--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <link rel="stylesheet" href="styles.css">
-    <title>Aluraflix</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Receitaflix</title>
 </head>
 
 <body>
-    <header>ALURAFLIX</header>
+    <header>ReveitaFLIX</header>
 
     <section>
         <div>
