--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-    <header>ReveitaFLIX</header>
+    <header>ReceitaFLIX</header>
 
     <section>
         <div>
-            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+            <h1>comidas salgadas</h1>
             <p>#homem-aranha</p>
         </div>
 
