--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <section>
         <div>
-            <h1>comidas salgadas</h1>
-            <p>#homem-aranha</p>
+            <h1>COMIDAS SALGADAS</h1>
+            <p>#FRANGO</p>
         </div>
 
         <div>
